<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUp">

    <TextView
        android:id="@+id/tituloCrearCuenta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:fontFamily="@font/font_mono"
        android:text="@string/crea_tu_cuenta"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutNombre"
        android:layout_width="345dp"
        android:layout_height="57dp"
        android:layout_marginTop="72dp"
        android:textColorHint="@color/black"
        app:boxBackgroundColor="@color/grey2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tituloCrearCuenta"
        app:startIconDrawable="@drawable/ic_person">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/cajaNombre"
        android:layout_width="344dp"
        android:layout_height="wrap_content"
        android:hint="@string/nombre"
        android:textColorHint="@color/grey"
        tools:ignore="MissingConstraints" />
    <requestFocus />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutEmail"
        android:layout_width="345dp"
        android:layout_height="57dp"
        android:layout_marginTop="32dp"
        android:textColorHint="@color/black"
        app:boxBackgroundColor="@color/grey2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layoutNombre"
        app:startIconDrawable="@drawable/ic_mail">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/cajaEmail"
            android:layout_width="344dp"
            android:layout_height="wrap_content"
            android:hint="@string/hintEmail"
            android:textColorHint="@color/grey" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="345dp"
        android:layout_height="57dp"
        android:layout_marginTop="32dp"
        app:boxBackgroundColor="@color/grey2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layoutEmail"
        app:passwordToggleEnabled="true"
        app:startIconDrawable="@drawable/ic_lock">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/cajaPassword"
            android:layout_width="344dp"
            android:layout_height="wrap_content"
            android:hint="@string/hintPassword"
            android:inputType="textPassword"
            android:textColorHint="@color/grey" />


    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/botonCrearCuenta"
        android:layout_width="211dp"
        android:layout_height="61dp"
        android:layout_marginTop="72dp"
        android:backgroundTint="@color/grey"
        android:text="@string/crear_cuenta"
        android:textSize="18sp"
        app:cornerRadius="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />


</androidx.constraintlayout.widget.ConstraintLayout>